--- a/syft/internal/fileresolver/test-fixtures/image-files-deleted/Dockerfile
+++ b/syft/internal/fileresolver/test-fixtures/image-files-deleted/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.17.1 as tools
+FROM alpine:3.17.1@sha256:93d5a28ff72d288d69b5997b8ba47396d2cbb62a72b5d87cd3351094b5d578a0 as tools
 FROM scratch
 COPY --from=tools /bin /bin
 COPY --from=tools /lib /lib
