--- a/test/integration/test-fixtures/image-go-bin-arch-coverage/Dockerfile
+++ b/test/integration/test-fixtures/image-go-bin-arch-coverage/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:latest as builder
+FROM golang:1.21.1@sha256:cffaba795c36f07e372c7191b35ceaae114d74c31c3763d442982e3a4df3b39e as builder
 WORKDIR /app
 COPY go.sum go.mod app.go ./
 
