--- a/test/integration/test-fixtures/image-suse-all-layers/Dockerfile
+++ b/test/integration/test-fixtures/image-suse-all-layers/Dockerfile
@@ -1,2 +1,2 @@
-FROM registry.suse.com/suse/sle15:15.3.17.20.20
+FROM registry.suse.com/suse/sle15:15.3.17.20.20@sha256:fd657ecbab5ca564d6933e887f6ae8542a9398e6a4b399f352ce10c3a24afc64
 RUN zypper in -y wget
