change homebrew release trigger (#2242)
Signed-off-by: Alex Goodman <wagoodman@users.noreply.github.com>

--- a/.github/workflows/release-homebrew.yaml
+++ b/.github/workflows/release-homebrew.yaml
@@ -1,8 +1,10 @@
 name: "Release Homebrew"
 
 on:
+  workflow_dispatch:
   release:
-    types: [published]
+    types:
+      - released
 
 jobs:
   homebrew:
