--- a/.github/workflows/validations.yaml
+++ b/.github/workflows/validations.yaml
@@ -11,6 +11,7 @@ permissions:
     contents: read
 
 jobs:
+
   Static-Analysis:
     # Note: changing this job name requires making the same update in the .github/workflows/release.yaml pipeline
     name: "Static analysis"
@@ -101,12 +102,6 @@ jobs:
       - name: Bootstrap environment
         uses: ./.github/actions/bootstrap
         with:
-          # why have another build cache key? We don't want unit/integration/etc test build caches to replace
-          # the snapshot build cache, which includes builds for all OSs and architectures. As long as this key is
-          # unique from the build-cache-key-prefix in other CI jobs, we should be fine.
-          #
-          # note: ideally this value should match what is used in release (just to help with build times).
-          build-cache-key-prefix: "snapshot"
           bootstrap-apt-packages: ""
 
       - name: Build snapshot artifacts
@@ -117,7 +112,12 @@ jobs:
       - name: Upload snapshot artifacts
         uses: actions/cache/save@704facf57e6136b1bc63b828d79edcd491f0ee84 #v3.3.2
         with:
-          path: snapshot
+          # we need to preserve the snapshot data itself as well as the task data that confirms if the
+          # snapshot build is stale or not. Otherwise the downstream jobs will attempt to rebuild the snapshot
+          # even though it already exists.
+          path: |
+            snapshot
+            .task
           key: snapshot-build-${{ github.run_id }}
 
 
@@ -129,11 +129,23 @@ jobs:
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 #v4.1.1
 
+      - name: Bootstrap environment
+        uses: ./.github/actions/bootstrap
+
       - name: Download snapshot build
+        id: snapshot-cache
         uses: actions/cache/restore@704facf57e6136b1bc63b828d79edcd491f0ee84 #v3.3.2
         with:
-          path: snapshot
+          path: |
+            snapshot
+            .task
+          fail-on-cache-miss: true
           key: snapshot-build-${{ github.run_id }}
+
+      # workaround for https://github.com/actions/cache/issues/1265
+      - name: (cache-miss) Snapshot build missing
+        if: steps.snapshot-cache.outputs.cache-hit != 'true'
+        run: echo "unable to download snapshots from previous job" && false
 
       - name: Run comparison tests (Linux)
         run: make compare-linux
@@ -165,11 +177,28 @@ jobs:
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 #v4.1.1
 
+      - name: Bootstrap environment
+        uses: ./.github/actions/bootstrap
+        with:
+          bootstrap-apt-packages: ""
+          compute-fingerprints: "false"
+          go-dependencies: false
+          go-version: ""
+
       - name: Download snapshot build
+        id: snapshot-cache
         uses: actions/cache/restore@704facf57e6136b1bc63b828d79edcd491f0ee84 #v3.3.2
         with:
-          path: snapshot
+          path: |
+            snapshot
+            .task
+          fail-on-cache-miss: true
           key: snapshot-build-${{ github.run_id }}
+
+      # workaround for https://github.com/actions/cache/issues/1265
+      - name: (cache-miss) Snapshot build missing
+        if: steps.snapshot-cache.outputs.cache-hit != 'true'
+        run: echo "unable to download snapshots from previous job" && false
 
       - name: Restore docker image cache for compare testing
         id: mac-compare-testing-cache
@@ -203,10 +232,19 @@ jobs:
           key: ${{ runner.os }}-cli-test-cache-${{ hashFiles('test/cli/test-fixtures/cache.fingerprint') }}
 
       - name: Download snapshot build
+        id: snapshot-cache
         uses: actions/cache/restore@704facf57e6136b1bc63b828d79edcd491f0ee84 #v3.3.2
         with:
-          path: snapshot
+          path: |
+            snapshot
+            .task
+          fail-on-cache-miss: true
           key: snapshot-build-${{ github.run_id }}
+
+      # workaround for https://github.com/actions/cache/issues/1265
+      - name: (cache-miss) Snapshot build missing
+        if: steps.snapshot-cache.outputs.cache-hit != 'true'
+        run: echo "unable to download snapshots from previous job" && false
 
       - name: Run CLI Tests (Linux)
         run: make cli
