--- a/test/integration/test-fixtures/image-test-java-purls/Dockerfile
+++ b/test/integration/test-fixtures/image-test-java-purls/Dockerfile
@@ -1,1 +1,1 @@
-FROM anchore/test_images@sha256:10008791acbc5866de04108746a02a0c4029ce3a4400a9b3dad45d7f2245f9da
+FROM anchore/test_images:java-1abc58f@sha256:3add9f90e9ed35739cc99b7830767e09eec921052e2412adf4491648c741f066
