--- a/syft/format/template/test-fixtures/csv-hasField.template
+++ b/syft/format/template/test-fixtures/csv-hasField.template
@@ -1,4 +1,4 @@
 "Package","Version Installed","Found by","Author"
-{{- range .Artifacts}}
-"{{.Name}}","{{.Version}}","{{.FoundBy}}","{{ if hasField .Metadata "Author" }}{{.Metadata.Author}}{{ else }}NO AUTHOR SUPPLIED{{end}}"
+{{- range .artifacts}}
+"{{.name}}","{{.version}}","{{.foundBy}}","{{ if index .metadata "author" }}{{.metadata.author}}{{ else }}NO AUTHOR SUPPLIED{{end}}"
 {{- end}}
