--- a/test/cli/test-fixtures/csv.template
+++ b/test/cli/test-fixtures/csv.template
@@ -1,4 +1,4 @@
 "Package","Version Installed", "Found by"
-{{- range .Artifacts}}
-"{{.Name}}","{{.Version}}","{{.FoundBy}}"
+{{- range .artifacts}}
+"{{.name}}","{{.version}}","{{.foundBy}}"
 {{- end}}
